///////////////////////////////////////////////////////////
//  Unit.cs
//  Implementation of the Class Unit
//  Generated by Enterprise Architect
//  Created on:      09-Okt-2024 08:14:27
//  Original author: vistmm
///////////////////////////////////////////////////////////

using System;
using UnityEngine;



public class Unit : MonoBehaviour, IUnit, ISelectable, ITarget{
    private int teamNumber;

    public Unit(){

	}

	~Unit(){

	}

    public int TeamNumber { get => teamNumber; set => teamNumber = value; }

    public IAbility GetDefaultAbility()
    {
        throw new NotImplementedException();
    }

    public void Selected()
    {
        throw new NotImplementedException();
    }
    public void Deselected()
    {
        throw new NotImplementedException();
    }
    public void OnHoverEnter()
    {
        throw new NotImplementedException();
    }
    public void OnHoverExit()
    {
        throw new NotImplementedException();
    }
}//end Unit